# first-order-logic-prover

./: .gitignore  Makefile  README.md  build.sh  fo-prover.cabal  run_tests.sh
app/: Formula.hs  Functions.hs  Main.hs  Parser.hs  Prover.hs  Utils.hs
