cabal-version:      2.4
name:               fo-prover
version:            0.1.0.0

author:             Mieszko Sabo
maintainer:         ms406322@students.mimuw.edu.pl


executable Fo-prover
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: 
        Parser,
        Formula,
        Utils,
        Prover,
        Functions

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        parsec ^>= 3.1.14.0,
        QuickCheck ^>= 2.14.1,
        mtl ^>= 2.2.2,
    hs-source-dirs:   app
    default-language: Haskell2010
